@@ -1,7 +1,9 @@
 /*-------------------------------------------------------------------------
-   _isppace.c - part of ctype.h
+   isalnum.c
 
-   Copyright (c) 1999, Sandeep Dutta . sandeep.dutta@usa.net
+   Philipp Klaus Krause, philipp@informatik.uni-frankfurt.de 2013
+
+   (c) 2013 Goethe-Universität Frankfurt
 
    This library is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
@@ -28,16 +30,8 @@
 
 #include <ctype.h>
 
-#define UC(c)	((unsigned char)c)
-
-char isspace (unsigned char c)
+int isblank (int c)
 {
-    if ( c == UC(' ')  ||
-         c == UC('\f') ||
-         c == UC('\n') ||
-         c == UC('\r') ||
-         c == UC('\t') ||
-         c == UC('\v') )
-        return 1;
-    return 0;
+  return (c == ' ' || c == '\t');
 }
+
