@@ -1,7 +1,9 @@
 /*-------------------------------------------------------------------------
-   _isxdigit.c - part of ctype.h
+   isslower.c
 
-   Copyright (c) 1999, Sandeep Dutta . sandeep.dutta@usa.net
+   Philipp Klaus Krause, philipp@informatik.uni-frankfurt.de 2013
+
+   (c) 2013 Goethe-Universität Frankfurt
 
    This library is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
@@ -28,13 +30,12 @@
 
 #include <ctype.h>
 
-#define UC(c)	((unsigned char)c)
+#ifdef islower
+#undef islower
+#endif
 
-char isxdigit (unsigned char c)
+int islower (int c)
 {
-    if ( ( c >= UC('0') && c <= UC('9')) ||
-         ( c >= UC('a') && c <= UC('f')) ||
-         ( c >= UC('A') && c <= UC('F')) )
-        return 1;
-    return 0;
+  return (c >= 'a' && c <= 'z');
 }
+
